@@ -6,7 +6,7 @@
 */
 
 $name		= _("Bars014");
-$description	= _("White background - red bars, red, white, & grey text");
+$description	= _("White background - red bars, red, white, & grey text. Cheers go out to my Kerstin.");
 $version	= '2.0.0';
 $last_update	= '2008-08-17';
 
